<resources>
    <string name="app_name">Fuel Report</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_heading">"OIL PUMP DAILY REPORT"</string>
    <string name="submit_sales_report">"SUBMIT SALES REPORT"</string>
    <string name="submit_transaction_report">"SUBMIT TRANSACTION REPORT"</string>
    <string name="submit_transaction">"SUBMIT TRANSACTION   REPORT"</string>
    <string name="view_report">"VIEW REPORT"</string>
    <string name="dashboard">"DASHBOARD"</string>
    <string name="report_not_submit">"Report Not Submitted For Today"</string>
    <string name="report_submit_today">"Report Submitted For Today"</string>
    <string name="price">"Price : "</string>
    <string name="date">"Date : "</string>
    <string name="start_reading">"Start Reading :"</string>
    <string name="end_reading">"End Reading :"</string>
    <string name="nozzel_1">"NOZZEL-1"</string>
    <string name="nozzel_2">"NOZZEL-2"</string>
    <string name="select_date">"Select Date"</string>
    <string name="start_date_text">Start Date - %1$s</string>
    <string name="end_date_text">End Date - %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>