<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_2sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="@dimen/_20sdp"
        app:cardElevation="@dimen/_2sdp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nozzelName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_13sdp"
                android:background="@color/teal_700"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/nozzel_1"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="@string/start_reading"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/startReading"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text"
                    android:elevation="@dimen/_2sdp"
                    android:hint="0.0"
                    android:inputType="numberDecimal"
                    android:padding="@dimen/_10sdp"
                    android:textAlignment="center"
                    android:textColor="@color/lightGray"
                    android:textColorHint="#C8C5C5"
                    android:textSize="@dimen/_13sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="@string/end_reading"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/endReading"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text"
                    android:elevation="@dimen/_2sdp"
                    android:hint="0.0"
                    android:inputType="numberDecimal"
                    android:padding="@dimen/_10sdp"
                    android:textAlignment="center"
                    android:textColor="@color/lightGray"
                    android:textColorHint="#C8C5C5"
                    android:textSize="@dimen/_13sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="Sale :"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/saleReading"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text"
                    android:elevation="@dimen/_2sdp"
                    android:hint="0.0"
                    android:padding="@dimen/_10sdp"
                    android:textAlignment="center"
                    android:inputType="numberDecimal"
                    android:textColor="@color/lightGray"
                    android:textColorHint="#C8C5C5"
                    android:textSize="@dimen/_13sdp" />
            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>