<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SalesReportActivity">

    <!-- Main Content -->
    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <!-- Top Menu Bar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/side_nav_bar"
            android:gravity="center">

            <ImageView
                android:id="@+id/menuBtn"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@mipmap/menuicon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/submit_sales_report"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />
        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_12sdp"
            app:cardCornerRadius="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@color/offWhite"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/llHeadingCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/yellow"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="@dimen/_2sdp">

                        <ImageView
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_gravity="center"
                            android:src="@mipmap/fuel" />

                        <TextView
                            android:id="@+id/fuelTypeHeading"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_2sdp"
                            android:gravity="center"
                            android:padding="@dimen/_5sdp"
                            android:text="PETROL"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_14sdp"
                            android:textStyle="bold" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_14sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/dateTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="00/00/0000"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_14sdp"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/price"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp"
                            android:textStyle="bold" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/edit_text"
                            android:elevation="@dimen/_2sdp"
                            android:enabled="false"
                            android:hint="100.5 Rs/-"
                            android:padding="@dimen/_10sdp"
                            android:textAlignment="center"
                            android:textColor="@color/lightGray"
                            android:textColorHint="@color/darkGray"
                            android:textSize="@dimen/_13sdp" />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/nozzelRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_10sdp"
                        android:layout_weight="1"
                        >

                    </androidx.recyclerview.widget.RecyclerView>
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_marginRight="@dimen/_10sdp"
                 android:background="@color/white"
                 app:cardCornerRadius="@dimen/_10sdp">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="#00BCD4"
                     android:orientation="vertical">
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/_30sdp"
                         android:gravity="center"
                         android:orientation="horizontal">
                         <TextView
                             android:layout_weight="1"
                             android:gravity="center"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="@dimen/_13sdp"
                             android:textStyle="bold"
                             android:textColor="@color/black"
                             android:text="Total Diesel Sales :"/>
                         <TextView
                             android:layout_weight="1"
                             android:gravity="center"
                             android:textColor="@color/black"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="@dimen/_13sdp"
                             android:textStyle="bold"
                             android:text="23"/>

                     </LinearLayout>
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/_2sdp"
                         android:background="@color/black"/>
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/_30sdp"
                         android:gravity="center"
                         android:orientation="horizontal">
                         <TextView
                             android:layout_weight="1"
                             android:gravity="center"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="@dimen/_13sdp"
                             android:textStyle="bold"
                             android:textColor="@color/black"
                             android:text="Total Sales Amount :"/>
                         <TextView
                             android:layout_weight="1"
                             android:gravity="center"
                             android:textColor="@color/black"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="@dimen/_13sdp"
                             android:textStyle="bold"
                             android:text="2345"/>

                     </LinearLayout>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"

                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/rounded_btn"
                        android:gravity="center"
                        android:text="SUBMIT"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
    <!-- Side Menu -->
    <LinearLayout
        android:id="@+id/side_menu"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/side_nav_bar"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@mipmap/fuel" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:gravity="center"
            android:text="SELECT FUEL TYPE"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/Diesel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGray"
            android:padding="16dp"
            android:text="DIESEL"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/Petrol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="PETROL"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/CNG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="CNG"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:background="@color/white" />
        <!-- Add more menu items here -->

    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>